<resources>
    <string name="app_name">MathOlympAppv1</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_in">To Register Screen</string>
    <string name="action_register_in_short">Open Register Screen</string>
    <string name="action_signout_in">Sign out</string>
    <string name="action_signout_in_short">Sign out</string>
    <string name="action_register">Register user</string>
    <string name="action_register_short">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="please_wait">please wait</string>
    <string name="splashfragment">SplashFragment</string>
    <string name="msg_token_fmt">Token</string>
    <string name="btn_scrl_frag_verify">Verify</string>
    <string name="ed_txt_scrl_hint">please enter answer</string>
    <string name="txt_solution_text">solution_text</string>
    <string name="txt_hint_text">hint_text</string>
    <string name="txt_answer_text">answer_text</string>
    <string name="scroll_btn_search">Search</string>
    <string name="tv_scroll_toolbar_hint">Catch Hint</string>
    <string name="get_hint">catch hint</string>
    <string name="alertDialogTitleSolution">Solution</string>
    <string name="allertDialogNegativeButton">Exit</string>
    <string name="alertDialogPositiveButtonSolution">Cancel</string>
    <string name="alertDialogTitleForREZULTAT">\"REZULTAT \"</string>
    <string name="alertDialogHintButton">Hint</string>
    <string name="alertDialogShowTitleHINT">HINT</string>
    <string name="alertDialogShowMessageBodyHINT">\"zadacha_hint \"</string>
    <string name="alertDialogREZULTATNeutralButton">Solution</string>
    <string name="alertDialogRezultatForSolutionTitle">Solution</string>
    <string name="alertDialogRezultatForSolutionMessageBody">\"solution \"</string>
    <string name="alertDialogRezultatNegativeButton">Exit</string>
    <string name="scrollFrgMenuAddHintTitle">hint</string>
    <string name="scrollFrgMenuTitle">hint</string>
    <string name="scrollFrgMenuCondesedTitle">hint</string>
    <string name="alertDialogTitleHintCheck">HINT</string>
    <string name="alertDialogHintSetTitle">REZULTAT </string>
    <string name="alertDialogHintPositiveButton">Cancel</string>
    <string name="alertDialogUSPEHNegativeButton">Cancel</string>
    <string name="alertDialogUSPEHPositiveButton">Exit</string>
    <string name="alertDialogUSPEHSetTitle">REZULTAT </string>
    <string name="alertDialogUSPEHTitleCheck">USPEH</string>
    <string name="alertDialogShowUSPEHTitle">USPEH</string>
    <string name="alertDialogShowUSPEHMessageBodySet">TAK-TAKKKKKKKKKK</string>
    <string name="alertDialogShowOSHIBKAMessageBodySet">VOTT-TAK-TAKKKKKKKKKK</string>
    <string name="alertDialogShowOSHIBKASetTitle">OSHIBKA</string>
    <string name="appbar_score">Score: </string>
    <string name="appbar_title_scroll_fragm">Uslovie zadachi</string>
    <string name="appbar_title_zadacha_fragm">Spisok zadach</string>
</resources>