<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollingfragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ui.scrollingscreen.ScrollingFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvScrollMainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/tvScrollAnswerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/txt_answer_text" />


            <TextView
                android:id="@+id/tvScrollHintText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/txt_hint_text" />

            <TextView
                android:id="@+id/tvScrollSolutionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/txt_solution_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtxtAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="@string/ed_txt_scrl_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_scrl_frag_verify" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>